<?xml version="1.0" encoding="utf-8"?>
<resources>
    
    <string name="app_name">HikeFinder</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    <string name="nw">FIND A HIKE</string>
    <string name="profileCaps">PROFILE</string>
    <string name="location">Location</string>
    <string name="ocean_view">Ocean View</string>
    <string name="waterfall">Waterfall</string>
	<string name="dog_friendly">Dog Friendly</string>
	<string name="historical">Historical</string>
	<string name="geological">Geological</string>
	<string name="bikes_allowed">Bikes Allowed</string>
	<string name="title1">Select the Features for Your Hike:</string>
	<string name="zip">95060</string>
	<string name="yes">yes</string>
    <string name="distance">Distance</string>
    <string name="elevation">Elevation</string>
    <string name="submit">SUBMIT</string>
    <string name="miles">miles</string>
    <string name="feet">feet</string>
    <string name="route">Hike Route</string>
    <string name="view_checklist">View Checklist</string>
    <string name="view_map">View Map</string>
    <string name="completed">Completed? Rate this Hike</string>
    <string name="sample_route">Hibiscus Trail->\nRocky Ridge Trail->\nFisher Bluffs Trail->\nMayday Trail->\nHibiscus Trail</string>
    <string name="LOMB">Land of Medicine Buddha</string>
    <string name="sample_description">Land of Medicine Buddha, a Buddhist retreat center located just south of Santa Cruz in Soquel, CA! This is a supremely beautiful and peaceful area with lovely hiking trails through the redwoods. </string>
	<string name="features_present">Features Present</string>
	<string name="download_map">Download Map</string>
	<string name="description">Description</string>
	<string name="select_hike">Select Hike</string>
	<string name="sample_features">Dog-Friendly, Historical\n6 miles, 1500 foot elevation gain</string>
	<string name="map_button">Map Button</string>
  
    <string name="profile">Profile</string>

    <string name="results">Results</string>
    <string name="home">Home</string>
    <string name="retrn">Return</string>
    <string name="prof1">Hikes Completed  ................ 5</string>
    <string name="prof1_1">Hike One</string>
    <string name="prof1_2">Hike Two</string>
    <string name="prof1_3">Hike Three</string> 
    <string name="prof2">Total Miles  .......................... 58</string>
    <string name="prof3">Calories Burned  .................. 31,043</string>
    	
    <string name="checklist_checklist">Checklist</string>
    <string name="checklist_water">Water</string>
    <string name="checklist_flashlight">Flashlight</string>
	<string name="checklist_money">Money</string>
	<string name="checklist_food">Small Snack</string>
	<string name="checklist_aid">First Aid Kit</string>
	<string name="checklist_warnings">Warnings:</string>
	<string name="checklist_sunset">Sunset is at: </string>
	<string name="checklist_sunset_time">7:33 pm</string>
	<string name="checklist_back">Back</string>
	<string name="checklist_personalitems">Personal Items</string>
	<string name="checklist_personalitems_list">pocket knife</string>
	
    <string name="completed_completed">Completed</string>
	<string name="completed_rate">Rate this hike</string>
    <string name="completed_review">Write a review</string>
	<string name="completed_sample_review">I liked this hike. All the features I wanted were present, and the hike took as long as expected.</string>
    <string name="completed_notes">Write some notes</string>
	<string name="completed_sample_notes">Had to pay for parking.</string>
	<string name="completed_save">Save</string>
	
	<string-array name="mileage_array">
	    <item>No Preference</item>
        <item>1&#8211;3 miles</item>
        <item>3&#8211;6 miles</item>
        <item>6&#8211;8 miles</item>
        <item>8&#8211;10 miles</item>
        <item>10&#8211;12 miles</item>
        <item>12&#8211;15 miles</item>
        <item>15 or above miles</item>
    </string-array>
    
	<string-array name="elevation_array">
	    <item>No Preference</item>
        <item>0&#8211;500 ft</item>
        <item>500&#8211;1000 ft</item>
        <item>1000&#8211;2000 ft</item>
        <item>2000&#8211;3000 ft</item>
        <item>3000&#8211;4000 ft</item>
        <item>4000&#8211;5000 ft</item>
        <item>5000 ft or above</item>
    </string-array>
    
	<string-array name="calories_array">
	    <item>No Preference</item>
        <item>0&#8211;250 calories</item>
        <item>250&#8211;500 calories</item>
        <item>500&#8211;1000 calories</item>
        <item>1000&#8211;2000 calories</item>
        <item>2000&#8211;3000 calories</item>
        <item>3000&#8211;5000 calories</item>
        <item>5000 or above calories</item>
    </string-array>
    
		<string-array name="state_array">
        <item>AL</item>
        <item>AK</item>
        <item>AZ</item>
        <item>AR</item>
        <item>CA</item>
        <item>CO</item>
        <item>CT</item>
        <item>DE</item>
        <item>FL</item>
        <item>GA</item>
        <item>HI</item>
        <item>IA</item>
        <item>ID</item>
        <item>IL</item>
        <item>IN</item>
        <item>KS</item>
        <item>KY</item>
        <item>LA</item>
        <item>MA</item>
        <item>MD</item>
        <item>ME</item>
        <item>MI</item>
        <item>MN</item>
        <item>MO</item>
        <item>MS</item>
        <item>MT</item>
        <item>NC</item>
        <item>ND</item>
        <item>NE</item>
        <item>NH</item>
        <item>NJ</item>
        <item>NM</item>
        <item>NV</item>
        <item>NY</item>
        <item>OH</item>
        <item>OK</item>
        <item>OR</item>
        <item>PA</item>
        <item>RI</item>
        <item>SC</item>
        <item>SD</item>
        <item>TN</item>
        <item>TX</item>
        <item>UT</item>
        <item>VA</item>
        <item>VT</item>
        <item>WA</item>
        <item>WI</item>
        <item>WV</item>
        <item>WY</item>
    </string-array>

	<string-array name="distance_array">
	    <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
        <item>36</item>
        <item>37</item>
        <item>38</item>
        <item>39</item>
        <item>40</item>
    </string-array>	
    
	<string-array name="decimal_array">
	    <item>.0</item>
	    <item>.1</item>
        <item>.2</item>
        <item>.3</item>
        <item>.4</item>
        <item>.5</item>
        <item>.6</item>
        <item>.7</item>
        <item>.8</item>
        <item>.9</item>
	</string-array>
	
	<string-array name="elevation_change_array">
	    <item>100</item>
        <item>200</item>
        <item>300</item>
        <item>400</item>
        <item>500</item>
        <item>600</item>
        <item>700</item>
        <item>800</item>
        <item>900</item>
        <item>1100</item>
        <item>1200</item>
        <item>1300</item>
        <item>1400</item>
        <item>1500</item>
        <item>1600</item>
        <item>1700</item>
        <item>1800</item>
        <item>1900</item>
        <item>2000</item>
        <item>2100</item>
        <item>2200</item>
        <item>2300</item>
        <item>2400</item>
        <item>2500</item>
        <item>2600</item>
        <item>2700</item>
        <item>2800</item>
        <item>2900</item>
        <item>3000</item>
        <item>3100</item>
        <item>3200</item>
        <item>3300</item>
        <item>3400</item>
        <item>3500</item>
        <item>3600</item>
        <item>3700</item>
        <item>3800</item>
        <item>3900</item>
        <item>4000</item>
        <item>4100</item>
        <item>4200</item>
        <item>4300</item>
        <item>4400</item>
        <item>4500</item>
        <item>4600</item>
        <item>4700</item>
        <item>4800</item>
        <item>4900</item>
        <item>5000</item>
        <item>5250</item>
        <item>5500</item>
        <item>5750</item>
        <item>6000</item>
        <item>6250</item>
        <item>6500</item>
        <item>6750</item>
        <item>7000</item>
        <item>8000</item>
        <item>8250</item>
        <item>8500</item>
        <item>8750</item>
        <item>9000</item>
        <item>9250</item>
        <item>9500</item>
        <item>9750</item>
        <item>10000</item>
    </string-array>
</resources>
