<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/colorFawn"
    android:layout_weight="1">
    <LinearLayout
      android:layout_width="fill_parent"
      android:layout_height="fill_parent"
      android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="455dp"
            android:background="@color/colorFawn" >

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textView1"
                android:layout_below="@+id/textView1"
                android:maxLines="10"
                android:text="@string/sample_features" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textView2"
                android:layout_below="@+id/textView2"
                android:layout_marginBottom="14dp"
                android:maxLines="10"
                android:text="@string/sample_description" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textView1"
                android:layout_alignParentTop="true"
                android:text="@string/LOMB"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView6"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="14dp"
                android:text="@string/features_present"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textView5"
                android:layout_below="@+id/textView5"
                android:layout_marginTop="24dp"
                android:text="View Map"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textView4"
                android:layout_below="@+id/textView4"
                android:layout_marginTop="41dp"
                android:text="@string/description"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <ImageButton
                android:id="@+id/imageButtonMap"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_alignTop="@+id/textView3"
                android:layout_toRightOf="@+id/textView1"
                android:contentDescription="@string/map_button"
                android:src="@drawable/index" />

            <Button
                android:id="@+id/button1"
                android:background="@color/colorAsparagus"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/imageButtonMap"
                android:layout_marginTop="18dp"
                android:text="Select Hike" />
            
        </RelativeLayout>

</LinearLayout>

</ScrollView>